Updated generated index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 		<title>Гороскоп на сегодня</title>
 	</head>
 	<body>
-		<h1>Что день 2020-04-27 готовит</h1>
-		<p>Вечером предостерегайтесь гостей из забытого прошлого. Днём будьте открыты для гостей из забытого прошлого. Вечером будьте открыты для встреч со старыми знакомыми. </p>
-		<p>Днём ожидайте гостей из забытого прошлого. Вечером предостерегайтесь встреч со старыми знакомыми. Вечером предостерегайтесь неожиданного праздника. </p>
-		<p>Вечером предостерегайтесь гостей из забытого прошлого. Ночью ожидайте приятных перемен. Перед Сном предостерегайтесь неожиданного праздника. </p>
-		<p>Утром будьте открыты для встреч со старыми знакомыми. Ночью ожидайте гостей из забытого прошлого. Перед Сном предостерегайтесь гостей из забытого прошлого. </p>
-		<p>Днём ожидайте встреч со старыми знакомыми. Ночью будьте открыты для приятных перемен. Перед Сном будьте открыты для гостей из забытого прошлого. </p>
-	</body>
+		<h1>Ваши предсказания на 2020-04-27</h1>
+		<p>Вечером будьте открыты для приятных перемен. Ночью предостерегайтесь неожиданного праздника. Перед Сном будьте открыты для неожиданного праздника. Вечером будьте открыты для неожиданного праздника. </p>
+		<p>Утром предостерегайтесь приятных перемен. Ночью предостерегайтесь гостей из забытого прошлого. После Обеда будьте открыты для неожиданного праздника. Перед Сном будьте открыты для приятных перемен. </p>
+		<p>После Обеда ожидайте гостей из забытого прошлого. Ночью предостерегайтесь гостей из забытого прошлого. Перед Сном ожидайте неожиданного праздника. Перед Сном предостерегайтесь встреч со старыми знакомыми. </p>
+		<hr>
+		<a href='about.html'>О реализации</a></body>
 </html>
